--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -7,7 +7,7 @@ FROM php:5.6-apache
 RUN a2enmod rewrite
 
 # install the PHP extensions we need
-RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysql-client vim-tiny \
+RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysql-client vim-tiny git \
   && rm -rf /var/lib/apt/lists/* \
   && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
   && docker-php-ext-install gd mbstring pdo pdo_mysql pdo_pgsql
