--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -10,6 +10,6 @@ RUN a2enmod rewrite
 RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysql-client vim-tiny git \
   && rm -rf /var/lib/apt/lists/* \
   && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
-  && docker-php-ext-install gd mbstring pdo pdo_mysql memcached
+  && docker-php-ext-install gd mbstring pdo pdo_mysql memcache
 
 COPY php.ini /usr/local/etc/php/
