--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -10,6 +10,11 @@ RUN a2enmod rewrite
 RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysql-client vim-tiny git \
   && rm -rf /var/lib/apt/lists/* \
   && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
-  && docker-php-ext-install gd mbstring pdo pdo_mysql memcache
+  && docker-php-ext-install gd mbstring pdo pdo_mysql 
+  
+RUN curl -L http://pecl.php.net/get/memcached-2.2.0.tgz >> /usr/src/php/ext/memcached.tgz && \
+  tar -xf /usr/src/php/ext/memcached.tgz -C /usr/src/php/ext/ && \
+  rm /usr/src/php/ext/memcached.tgz && \
+  docker-php-ext-install memcached-2.2.0
 
 COPY php.ini /usr/local/etc/php/
