--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -11,8 +11,9 @@ RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysq
   && rm -rf /var/lib/apt/lists/* \
   && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
   && docker-php-ext-install gd mbstring pdo pdo_mysql 
-  
-RUN curl -L http://pecl.php.net/get/memcached-2.2.0.tgz >> /usr/src/php/ext/memcached.tgz && \
+
+RUN apt-get install -y libmemcached-dev zlib1g-dev libncurses5-dev && \  
+  curl -L http://pecl.php.net/get/memcached-2.2.0.tgz >> /usr/src/php/ext/memcached.tgz && \
   tar -xf /usr/src/php/ext/memcached.tgz -C /usr/src/php/ext/ && \
   rm /usr/src/php/ext/memcached.tgz && \
   docker-php-ext-install memcached-2.2.0
