--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -10,7 +10,7 @@ RUN a2enmod rewrite
 RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysql-client openssh-client vim-tiny git \
   && rm -rf /var/lib/apt/lists/* \
   && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
-  && docker-php-ext-install gd mbstring pdo pdo_mysql calendar
+  && docker-php-ext-install gd mbstring pdo pdo_mysql calendar xhprof
 
 RUN apt-get update && apt-get install -y libmemcached-dev zlib1g-dev libncurses5-dev && \  
   curl -L http://pecl.php.net/get/memcached-2.2.0.tgz >> /usr/src/php/ext/memcached.tgz && \
