--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -10,12 +10,18 @@ RUN a2enmod rewrite
 RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev mysql-client openssh-client vim-tiny git \
   && rm -rf /var/lib/apt/lists/* \
   && docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
-  && docker-php-ext-install gd mbstring pdo pdo_mysql calendar xhprof
+  && docker-php-ext-install gd mbstring pdo pdo_mysql calendar 
 
 RUN apt-get update && apt-get install -y libmemcached-dev zlib1g-dev libncurses5-dev && \  
   curl -L http://pecl.php.net/get/memcached-2.2.0.tgz >> /usr/src/php/ext/memcached.tgz && \
   tar -xf /usr/src/php/ext/memcached.tgz -C /usr/src/php/ext/ && \
   rm /usr/src/php/ext/memcached.tgz && \
   docker-php-ext-install memcached-2.2.0
+  
+RUN cd /tmp/ && \
+    curl -O https://pecl.php.net/get/xhprof-0.9.4.tgz && \
+    tar zxvf xhprof-0.9.4.tgz && \
+    mv xhprof-0.9.4/extension /usr/src/php/ext/xhprof && \
+    docker-php-ext-install xhprof
 
 COPY php.ini /usr/local/etc/php/
