--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get install -y libpng12-dev libjpeg-dev libpq-dev \
   && docker-php-ext-install gd mbstring pdo pdo_mysql zip calendar
 
 RUN apt-get update && apt-get install -y libmemcached-dev git \
-    && cd /tmp
+    && cd /tmp \
     && git clone https://github.com/php-memcached-dev/php-memcached \
     && cd php-memcached \
     && git checkout php7 \
