--- a/7.0/php.ini
+++ b/7.0/php.ini
@@ -1,7 +1,9 @@
 [PHP]
 memory_limit = 256M
 
-error_log = /var/www/log/php_errors.log
+log_errors = On
+error_log  = /dev/stderr
+
 
 ; enable opcache
 zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/opcache.so
