added missing extension

--- a/7.0-fpm-alpine/Dockerfile
+++ b/7.0-fpm-alpine/Dockerfile
@@ -25,6 +25,7 @@ RUN set -ex \
 		opcache \
 		pdo_mysql \
 		zip \
+		calendar \
 	&& runDeps="$( \
 		scanelf --needed --nobanner --format '%n#p' --recursive /usr/local \
 			| tr ',' '\n' \
