Added soap php extension

--- a/7.0-fpm-alpine/Dockerfile
+++ b/7.0-fpm-alpine/Dockerfile
@@ -26,6 +26,7 @@ RUN set -ex \
 		pdo_mysql \
 		zip \
 		calendar \
+		soap \
 	&& runDeps="$( \
 		scanelf --needed --nobanner --format '%n#p' --recursive /usr/local \
 			| tr ',' '\n' \
