--- a/7.0-fpm-alpine/Dockerfile
+++ b/7.0-fpm-alpine/Dockerfile
@@ -44,5 +44,5 @@ RUN set -ex \
 
 # set recommended PHP.ini settings
 # see https://secure.php.net/manual/en/opcache.installation.php
-COPY opcache-recommended.ini ./usr/local/etc/php/conf.d/
-COPY xdebug.ini ./usr/local/etc/php/conf.d
+COPY opcache-recommended.ini /usr/local/etc/php/conf.d/
+COPY xdebug.ini /usr/local/etc/php/conf.d
