--- a/7.2-apache/Dockerfile
+++ b/7.2-apache/Dockerfile
@@ -22,6 +22,7 @@ RUN set -eux; \
 		libpng-dev \
 		libpq-dev \
 		libzip-dev \
+		libxml2-dev \
 	; \
 	\
 	docker-php-ext-configure gd \
@@ -36,6 +37,7 @@ RUN set -eux; \
 		pdo_mysql \
 		pdo_pgsql \
 		zip \
+		soap \
 	; \
 	\
 # reset apt-mark's "manual" list so that "purge --auto-remove" will remove all build dependencies
