--- a/7.4-fpm-alpine/Dockerfile
+++ b/7.4-fpm-alpine/Dockerfile
@@ -1,48 +1,60 @@
-# Dockerfile inspired by "official" drupal docker images 
-# (@see https://hub.docker.com/_/drupal/)
-# @see also https://github.com/docker-library/drupal/blob/613b25738ce74aa3a675ca1f70ce9e6e3b26036c/7/fpm-alpine/Dockerfile
-# 
-# from https://www.drupal.org/requirements/php#drupalversions
-#
-#   docker build -t php-drupal:7.0-fpm-alpine .
-#
-FROM php:7.2-fpm-alpine
+# from https://www.drupal.org/docs/8/system-requirements/drupal-8-php-requirements
+FROM php:7.4-fpm-alpine
 
-# env vars for building xdebug
-ENV BUILD_DEPS autoconf g++ make
-# install the PHP extensions we neeeeeeed
+# install the PHP extensions we need
 # postgresql-dev is needed for https://bugs.alpinelinux.org/issues/3642
-RUN set -ex \
-	&& apk add --no-cache --virtual .build-deps \
-			$BUILD_DEPS \
+RUN set -eux; \
+	\
+	apk add --no-cache --virtual .build-deps \
 		coreutils \
 		freetype-dev \
 		libjpeg-turbo-dev \
 		libpng-dev \
-		libxml2-dev \
-	&& docker-php-ext-configure gd \
-		--with-freetype-dir=/usr/include/ \
-		--with-jpeg-dir=/usr/include/ \
-		--with-png-dir=/usr/include/ \
-	&& docker-php-ext-install -j "$(nproc)" \
+		libzip-dev \
+		postgresql-dev \
+	; \
+	\
+	docker-php-ext-configure gd \
+		--with-freetype \
+		--with-jpeg=/usr/include \
+	; \
+	\
+	docker-php-ext-install -j "$(nproc)" \
 		gd \
 		opcache \
 		pdo_mysql \
+		pdo_pgsql \
 		zip \
-		calendar \
-		soap \
-	&& pecl install xdebug-2.7.2 \
-	&& docker-php-ext-enable xdebug \
-	&& runDeps="$( \
+	; \
+	\
+	runDeps="$( \
 		scanelf --needed --nobanner --format '%n#p' --recursive /usr/local \
 			| tr ',' '\n' \
 			| sort -u \
 			| awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
-	)" \
-	&& apk add --virtual .drupal-phpexts-rundeps $runDeps \
-	&& apk del .build-deps
+	)"; \
+	apk add --virtual .drupal-phpexts-rundeps $runDeps; \
+	apk del .build-deps
 
 # set recommended PHP.ini settings
 # see https://secure.php.net/manual/en/opcache.installation.php
-COPY opcache-recommended.ini /usr/local/etc/php/conf.d/
-COPY xdebug.ini /usr/local/etc/php/conf.d
+RUN { \
+		echo 'opcache.memory_consumption=128'; \
+		echo 'opcache.interned_strings_buffer=8'; \
+		echo 'opcache.max_accelerated_files=4000'; \
+		echo 'opcache.revalidate_freq=60'; \
+		echo 'opcache.fast_shutdown=1'; \
+	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
+
+# https://www.drupal.org/node/3060/release
+ENV DRUPAL_VERSION 7.72
+ENV DRUPAL_MD5 ed967195ce0e78bf2ab7245aaf0649d6
+
+RUN set -eux; \
+	curl -fSL "https://ftp.drupal.org/files/projects/drupal-${DRUPAL_VERSION}.tar.gz" -o drupal.tar.gz; \
+	echo "${DRUPAL_MD5} *drupal.tar.gz" | md5sum -c -; \
+	tar -xz --strip-components=1 -f drupal.tar.gz; \
+	rm drupal.tar.gz; \
+	chown -R www-data:www-data sites modules themes
+
+# vim:set ft=dockerfile:
