Added required extensions

--- a/7.4-apache/Dockerfile
+++ b/7.4-apache/Dockerfile
@@ -17,6 +17,7 @@ RUN set -eux; \
 		libpng-dev \
 		libpq-dev \
 		libzip-dev \
+		libxml2-dev \
 	; \
 	\
 	docker-php-ext-configure gd \
@@ -30,6 +31,7 @@ RUN set -eux; \
 		pdo_mysql \
 		pdo_pgsql \
 		zip \
+		soap \
 	; \
 	\
 # reset apt-mark's "manual" list so that "purge --auto-remove" will remove all build dependencies
